# mnetsoft

config/: Makefile
config/root/etc/: analog.cfg  ftpusers  inetd.conf  lynx.cfg  man.conf  pf.conf  rc.conf.local  rc.local  resolv.conf  sudoers  syslog.conf
contrib/: Makefile  omakefile
contrib/backtalk/: install
contrib/backtalk/backtalk-1.3.30/: Makefile.in  README  configure  configure.in
contrib/backtalk/bubblegum-1.2.4/: CHANGES-bubblegum  README-bubblegum  if.ins
contrib/backtalk/cinnamon-0.8.6/: CHANGES-cinnamon  README-cinnamon  if.ins
contrib/backtalk/configs/: abalone.config.bt
contrib/backtalk/gumball-0.1.0/: CHANGES-gumball  README-gumball  if.ins
contrib/backtalk/papaya-1.1.5/: CHANGES-papaya  README-papaya  if.ins
contrib/backtalk/patches/: abalone.config.bt.patch  bubblegum.config.bt.patch  cinnamon.config.bt.patch  papaya.config.bt.patch  pistachio.config.bt.patch
contrib/backtalk/vanilla-1.3.5/: CHANGES-vanilla  README-vanilla  if.ins
contrib/backtalk/wasabi-1.0.5/: CHANGES-wasabi  README-wasabi  if.ins
contrib/fronttalk/: config.pl  install  syslist
contrib/fronttalk/fronttalk-0.9.2/: CHANGES-fronttalk  README-fronttalk  fronttalk.bt  ft  if.ins
contrib/gate/gate-2.06/: CHANGES  Makefile.in  README  cmd.c  config.h.in  configure  configure.in  file.c  gate.1.C  gate.h  gate.help  line.c  main.c  opt.c  proc.c  spel.c  subs.c  syst.c  term.c  util.c
contrib/msgs/: msgs.c  pathnames.h
contrib/orville/: write.nohelper
contrib/orville/orville-write-2.55/: Makefile.in  helpers.c  lib_common.h  mesg.c
contrib/party/: 00-install  build  chantab  install  noisetab  party.welcome  partyhlp  partytab
contrib/party/party-2.12/: INSTALLATION  Makefile.in  input.c  opt.c  party.1  party.c  party.h  users.c
contrib/party/party-2.13/: close.c  input.c  party.c  party.h
doc/recipes/beef/: beef.and.ginger.shao.mai-doomfrog.z  sukiyaki-doomfrog.z
doc/recipes/bread/: breadmaker.catskill.mountain.french.bread-ballard.z  breadmaker.cracked.wheat.bread-arabella.z
doc/recipes/chocolate/: brownies-mcnally.z  brownies-mythago.z  chocolate.chip.pumpkin.bread-popcorn.z  chocolate.whipped.cream.frosting-mcnally.z  half.hearted.valentine.cookies-popcorn.z  sensational.turtles.brownies-aaron.z  triple.chocolate.brownies-aaron.z  valerie.brownies-popcorn.z  viennese.chocolate.gateau-griz.z
doc/recipes/dessert/: amish.friendship.bread-popcorn.z  betty.crocker.pie.crust-popcorn.z  bran.muffins-banzai.z  fruit.salad-tsty.z  moms.pie.crust-danr.z  moms.pie.crust-mew.z  no.bake.cookies-glenda.z  pie.crust-mythago.z  pie.crust.for.finnish.mushroom.pie-popcorn.z  pie.crusts.from.enchanted.broccoli.forest-popcorn.z  pineapple.zucchini.bread-chelsea.z  pound.cake-danr.z  pumpkin.cheesecake.with.bourbon.sour.cream.topping-mythago.z  quick.biscuit.mix-glenda.z  slovak.hroski-danr.z
doc/recipes/fish/: fantastic.fish-n8lic.z  reddened.catfish-chelsea.z
doc/recipes/homebrew/: a.sweet.stout-jdg.z  joshs.incalculable.nuclear.lager-jdg.z
doc/recipes/pasta/: elbows.with.three.cheeses-arabella.z  linguine.with.broccoli.and.pesto-popcorn.z  tarragon.pesto.and.artichoke.mushroom.pasta.sauce-popcorn.z
doc/recipes/pork/: crab.and.pork.stir.fry-doomfrog.z  pork.stew.with.sage.and.rosemary-chelsea.z
doc/recipes/sauces/: for.artichokes-popcorn.z  from.argentina-popcorn.z  garlic.cream.sauce.with.sundried.tomatoes.and.oysters-keats.z  nutritional.yeast-mythago.z  pizza.sauce-mcnally.z
doc/recipes/soups/: black.bean.soup-mta.z  gojiru-popcorn.z  quick.tomato.ramen-denise.z
doc/recipes/veggie/: applebutter.inn.rice.casserole-chelsea.z  cold.spicy.noodles-glenda.z  fried.rice-steve.and.mdw.z  huevos.chorerra-mta.z  metric.stir.fried.tofu-mdw.z  mostaccioli.and.broccoli.bake-chelsea.z  pumpkin-popcorn.z  quick.black.bean.dish-popcorn.z  roman.rice.and.beans-popcorn.z  sauerkraut.quiche-polygon.z  spinach.cheese.pie-morel.z  stuffed.green.peppers.w.creamy.walnut-sauce-chelsea.z  walnut.cutlets.with.broccoli.sauce-popcorn.z
soft/: Makefile
soft/apps/bank/: Makefile  bank.c  trans.c
soft/apps/menu/: help.txt  menu.go
soft/apps/ownu/: Makefile  README  cgi-decode.c  cgi-output.c  nu-lid.c  print-terms.c  wnu-error.c  wnu-getu.c  wnu-keys.c  wnu-login.c  wnu-main.c  wnu-parse.c  (+1 more)
soft/cmd/: Makefile  backspace.c  bbspost.pl  checkgrps.c  checktty.c  grexmore.c  grexmoresh.c  keirsey.c  laston.1  laston.c  members.c  newly-validated  pickashell  probe.c  pwlookup.c  realnames.c  setmyshell.c  skel.1  skel.c  tail+2.c  ttyuse.c  twit.awk  twit.c  watch.c  whoa.go  ylc.c  zengame.c
soft/games/: macarena
soft/libgrex/: Makefile  background.c  cmpstring.c  daemonize.c  doc.dxx  grexhash.c  isshellok.c  libgrex.h  progname.c  thread.c  warning.c
soft/sbin/: check_fws  dobackups  dosecurity  dovalidate  link_web_users.pl  lockuser  mkusers.pl  reapcheck  rebuild-active-incoming  upquota  validate  verify  webauthd.c
soft/scripts/: Grex.pm  Makefile  README  a.out  bbs  bbsguide  bbsh  board  change  change_plan  change_rseps  change_write_perms  clickify  cols  debriefing  delete  easyfiglet  faq  figlet-faq  filebrowse  forward  gatherfolk  gatherttyuse  gloria  gloria.update  grex-limits  grex-members  grex-principles  help  hvcn  identify-user  ignore  inventory  listal  listcommand  listcommands  listgroup  lunch  member  menumore  (+35 more)
web/htdocs/: 403.html  403.php.html  404.html  404.php.html  BOD-votelist.html  PROP-votelist.html  amazon.html  amazon.php.html  arbornet.html  arbornet.php.html  aup.html  aup.php.html  blank.php.html  bylaws.html  bylaws.php.html  conferences.html  conferences.php.html  connect.xhtml  contact.html  contact.php.html  contact.xhtml  email.html  email.php.html  emailsettings.html  emailsettings.php.html  faq.xhtml  free_shell_accounts.html  free_shell_accounts.php.html  grex.xhtml  grexdoc  help.html  help.php.html  help_abuse.html  help_abuse.php.html  help_account.html  help_account.php.html  help_www.html  help_www.php.html  help_www_add2index.html  help_www_add2index.php.html  (+54 more)
web/tools/: grep-htdocs  runtidy  syncweb
(+1423 files in other folders)
